Fix overflow of chart legend

--- a/dash-if-reference-player/src/app/components/metrics-view/metrics-view.component.css
+++ b/dash-if-reference-player/src/app/components/metrics-view/metrics-view.component.css
@@ -1,5 +1,5 @@
 mat-card {
-  height: 280px;
+  height: 290px;
   padding: 10px 10px 0;
 }
 
